syntax = "proto3";

package example.enumerations;

option go_package = "example.com/m/proto";

enum EyeColor {
  EYE_COLOR_UNSPECIFIED = 0;
  EYE_COLOR_BLUE = 1;
  EYE_COLOR_GREEN = 2;
  EYE_COLOR_RED = 3;
}

message Enumeration {
  EyeColor eye_color = 1;
}